--- a/src/app/core/api/endpoint/endpoint.component.scss
+++ b/src/app/core/api/endpoint/endpoint.component.scss
@@ -2,6 +2,10 @@
     font-size: 1.25rem;
     position: relative;
 
+    .url{
+        color: blue;
+    }
+    
     &__toggle{
         position: absolute;
         top:.5rem;
@@ -71,6 +75,7 @@
         align-content: center;
         justify-content: center;
         border-top: 1px dashed #ddd; 
+
         > div{
             flex: 1;
             &:first-child{
@@ -91,5 +96,8 @@
     &__json-view{
         background: #eee;
         padding: .5rem;
+        height: max-content;
+        max-height: 35rem;
+        overflow-y: auto;
     }
 }
